# lib/db/src/schema/auth.ts
@@ -1,0 +1,34 @@
+import { sql } from 'drizzle-orm';
+import { index, jsonb, pgTable, timestamp, varchar } from 'drizzle-orm/pg-core';
+
+// (IMPORTANT) This table is mandatory for Replit Auth, don't drop it.
+export const authSessionsTable = pgTable(
+  'auth_sessions',
+  {
+    sid: varchar('sid').primaryKey(),
+    sess: jsonb('sess').notNull(),
+    expire: timestamp('expire').notNull(),
+  },
+  (table) => [index('IDX_session_expire').on(table.expire)],
+);
+
+// (IMPORTANT) This table is mandatory for Replit Auth, don't drop it.
+export const usersTable = pgTable('users', {
+  id: varchar('id')
+    .primaryKey()
+    .default(sql`gen_random_uuid()`),
+  email: varchar('email').unique(),
+  firstName: varchar('first_name'),
+  lastName: varchar('last_name'),
+  profileImageUrl: varchar('profile_image_url'),
+  createdAt: timestamp('created_at', { withTimezone: true })
+    .notNull()
+    .defaultNow(),
+  updatedAt: timestamp('updated_at', { withTimezone: true })
+    .notNull()
+    .defaultNow()
+    .$onUpdate(() => new Date()),
+});
+
+export type UpsertUser = typeof usersTable.$inferInsert;
+export type User = typeof usersTable.$inferSelect;
